# botkin

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  config.json  debug_test.py  nvidia-setup-guid.md  ollama-setup-guid.md  pyproject.toml  test_api.py  test_request.json  tmp_debug_response.py  tmp_instructor_debug.py  tmp_vlm_debug.py
.claude/: settings.json
backend/: __main__.py  app.py  cli.py  concurrency.py  config.py  contracts.py  orchestrator.py
backend/api/: deps.py  upload.py
backend/db/: connection.py  queries.py
habr/: 2026-05-28--aiogram-hello-bot-searxng.md  2026-05-29--drug-instruction-extractor.md  2026-05-30--parsing-day3.md  lab-results-journal.md
parsing/: MODELS.md  README_extractor.md  drug_instruction_extractor.py  smoke_embed.py  smoke_test.py  smoke_test_simple.py  smoke_vlm.py  validate_and_fix.py
scripts/: build_analyte_reference.py  build_drug_reference.py
tests/: conftest.py  test_bot_hints.py  test_browse.py  test_build_analyte_reference.py  test_build_drug_reference.py  test_cards_header.py  test_cards_rx.py  test_classify_metadata.py  test_client_timeout.py  test_completeness_guard.py  test_config_analytes.py  test_doc_metadata_repo.py  test_doc_title.py  test_extract_mapping.py  test_extract_multipage.py  test_formats.py  test_keyboards.py  test_keyboards_build.py  test_llm_calls.py  test_migration.py  test_normalize_analytes.py  test_normalize_dates.py  test_normalize_drugs.py  test_normalize_numbers.py  test_normalize_units.py  test_orchestrator.py  test_orchestrator_delivery.py  test_orchestrator_stages.py  test_pdf_text.py  test_period.py  test_period_keyboards.py  test_period_summary.py  test_preprocess_images.py  test_progress_poll.py  test_progress_render.py  test_prompts.py  test_queries_ui.py  test_show_labs.py  test_smoke.py  test_text_layer_extract.py  (+2 more)
(+72 files in other folders)
