[project]
name = "botkin"
version = "0.2.0"
description = "Dr.Botkin — Telegram-бот для парсинга медицинских документов через qwen3-vl"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi==0.136.1",
    "httpx==0.28.1",
    "pydantic==2.10.4",
    "pydantic-settings>=2.14.0",
    "python-multipart==0.0.20",
    "uvicorn[standard]==0.34.0",
    "aiogram==3.28.2",
    "openai>=1.0.0",
    "instructor==1.7.2",
    "pymupdf>=1.27.2.3",
    "pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    "plotly==5.24.1",
    "kaleido==0.2.1",
    "rapidfuzz==3.14.5",
    "pillow-heif>=1.3.0",
    "opencv-python-headless>=4.10",
    "numpy>=1.26",
]

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.2",
    "ruff==0.8.6",
    "openpyxl>=3.1.5",
]

[project.scripts]
botkin-api = "botkin.api.app:app"
botkin-bot = "botkin.bot.main:run"

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
src = ["src"]